--- a/FacturacionElectronica/FacturacionElectronica.csproj
+++ b/FacturacionElectronica/FacturacionElectronica.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MailKit" Version="3.6.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
