--- a/FacturacionElectronicaService/FacturacionElectronicaService.csproj
+++ b/FacturacionElectronicaService/FacturacionElectronicaService.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Controlador\Controlador.csproj" />
+  </ItemGroup>
+
 </Project>
