--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ciudad.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Cotizaciones.cs" />
     <Compile Include="ItemsContable.cs" />
