--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ItemsContable.cs" />
     <Compile Include="Pagos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoPago.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
